add readme.md, few refactor